--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       <form action="/practice.html" method="POST">
         <h1>Login to start creating a burger!</h1>
         <label for="Username:">Username</label>
-        <input type="text" name = "username">
+        <input type="text" name = "username" id="username" required>
         <br>
         <label for="user-pw">Password:</label>
-        <input type="password" name="user-pw" id="user-pw">
+        <input type="password" name="user-pw" id="user-pw" required>
         <br>
         <label for="amount">How many patties do you want?</label>
         <input type="number" name="amount" id="amount" step="1">
@@ -80,7 +80,7 @@
         <section class="extra-info">
           <label for="extra">Anything else you want to add?</label>
           <br>
-          <textarea name="extra" id="extra" cols="40" rows="3"></textarea>
+          <textarea name="extra" id="extra" cols="40" rows="3" placeholder="No thanks, its perfect"></textarea>
 
         </section>
         <br>
